--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "crypto-js": "^3.1.6",
     "express": "^4.14.0",
+    "jsonwebtoken": "^8.1.0",
     "lodash": "^4.15.0",
     "mongodb": "^2.2.5",
-    "mongoose": "^4.13.0"
+    "mongoose": "^4.13.0",
+    "validator": "^5.6.0"
   },
   "devDependencies": {
     "expect": "^1.20.2",
